testdata/golden/sema/valid/heir_union_inheritance.sg
// Test: `heir` supports struct extension, aliases, and union members.

tag SomeInt(int);

type Base = { x: int };

type Child = Base : { y: int };

type AliasInt = int;

type Mixed = SomeInt(int) | int;

fn test_heir() {
    let child: Child = { x: 1, y: 2 };
    let alias_value: AliasInt = 1;
    let owned: own Child = own child;
    let int_value: int = 1;

    let a: bool = child heir Base;
    let b: bool = alias_value heir int;
    let c: bool = owned heir Base;
    let d: bool = int_value heir Mixed;
    let e: bool = nothing heir Mixed;

    let _ = a;
    let _ = b;
    let _ = c;
    let _ = d;
    let _ = e;
}
