testdata/golden/sema/invalid/is_heir_left_type.sg
// Test: `is`/`heir` require a value on the left-hand side.

type Foo = { value: int };

fn test_left_type_usage() {
    let a: bool = Foo is Foo;
    let b: bool = Foo heir Foo;
    let _ = a;
    let _ = b;
}
